Bug 460983 - [wayland] opening the context menu for a file browser side view, sometimes appears as a window
Summary: [wayland] opening the context menu for a file browser side view, sometimes ap...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-25 13:25 UTC by Oded Arbel
Modified: 2022-12-19 14:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screencast showing the problem. (594.29 KB, video/mp4)
2022-10-25 13:26 UTC, Oded Arbel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2022-10-25 13:25:43 UTC
SUMMARY
When another window is focused, right clicking on a Kate's sidebar view of "Documents", "Projects" or "Filesystem", the context menu opens as a window instead of a menu - including all window decorations. See attached screencast.

STEPS TO REPRODUCE
1. Start Kate, make sure it is not maximized and that one of the above mentioned sidebars is open.
2. Click on another window or the desktop
3. Right click the open sidebar view.

OBSERVED RESULT
A new window appears, whose contents is the expected context menu for the sidebar view that was clicked.

EXPECTED RESULT
A menu should appear without window decorations.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 5.26.80
KDE Frameworks Version:  5.100.0
Qt Version: 5.15.6

ADDITIONAL INFORMATION
This is possibly related to bugs #453532 (though I couldn't reproduce that) and #448498.
Comment 1 Oded Arbel 2022-10-25 13:26:14 UTC
Created attachment 153196 [details]
screencast showing the problem.
Comment 2 Christoph Cullmann 2022-10-25 18:54:34 UTC
Git commit acc47c7d16b86613f323de700936ec4469a6cd3e by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 25/10/2022 at 18:54.
Pushed by cullmann into branch 'master'.

set parent for QMenu

Takes care of most of the QMenu occurunces. A couple remain in
SearchPlugin

M  +1    -1    addons/filetree/katefiletree.cpp
M  +1    -1    addons/katesql/dataoutputview.cpp
M  +1    -1    addons/katesql/schemawidget.cpp
M  +1    -1    addons/lspclient/lspclientconfigpage.cpp
M  +4    -4    addons/project/gitwidget.cpp
M  +1    -1    addons/project/kateprojecttreeviewcontextmenu.cpp
M  +2    -5    addons/project/kateprojecttreeviewcontextmenu.h
M  +1    -1    addons/search/MatchExportDialog.cpp
M  +1    -1    apps/lib/kateoutputview.cpp
M  +1    -1    apps/lib/welcomeview/welcomeview.cpp

https://invent.kde.org/utilities/kate/commit/acc47c7d16b86613f323de700936ec4469a6cd3e
Comment 3 Waqar Ahmed 2022-10-26 07:14:31 UTC
Git commit 51244c75fc66ae4d014fd3629a357f7818063f55 by Waqar Ahmed.
Committed on 26/10/2022 at 07:12.
Pushed by waqar into branch 'release/22.08'.

set parent for QMenu

Takes care of most of the QMenu occurunces. A couple remain in
SearchPlugin
(cherry picked from commit acc47c7d16b86613f323de700936ec4469a6cd3e)

M  +1    -1    addons/filetree/katefiletree.cpp
M  +1    -1    addons/katesql/dataoutputview.cpp
M  +1    -1    addons/katesql/schemawidget.cpp
M  +1    -1    addons/lspclient/lspclientconfigpage.cpp
M  +4    -4    addons/project/gitwidget.cpp
M  +1    -1    addons/project/kateprojecttreeviewcontextmenu.cpp
M  +1    -1    addons/search/MatchExportDialog.cpp
M  +1    -1    apps/lib/kateoutputview.cpp

https://invent.kde.org/utilities/kate/commit/51244c75fc66ae4d014fd3629a357f7818063f55
Comment 4 Oded Arbel 2022-12-19 14:30:03 UTC
This issue is still apparent in the "Filesystem" sidebar.

I'm not sure, but that may be bug 453532 - KateFileBrowser uses KIO file wigets, though not specifically the Places view, but that seems to be a general issue with all KIO file widgets.