set parent for QMenu

Takes care of most of the QMenu occurunces. A couple remain in
SearchPlugin

BUG: 460983
(cherry picked from commit acc47c7d16b86613f323de700936ec4469a6cd3e)